fixed overfill on mobile issue

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -102,6 +102,10 @@ box-shadow: 0 5px 11px 0 rgba(66, 133, 244,.18),
     color: black;
 }
 
+* {
+    border: 1px solid red;
+}
+
 .tl-class {
     padding-right: 0;
  }
